@@ -1,36 +1,7 @@
 package dev.langchain4j.model.anthropic.internal.mapper;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import dev.langchain4j.agent.tool.ToolExecutionRequest;
-import dev.langchain4j.agent.tool.ToolParameters;
-import dev.langchain4j.agent.tool.ToolSpecification;
-import dev.langchain4j.data.image.Image;
-import dev.langchain4j.data.message.AiMessage;
-import dev.langchain4j.data.message.ChatMessage;
-import dev.langchain4j.data.message.ImageContent;
-import dev.langchain4j.data.message.SystemMessage;
-import dev.langchain4j.data.message.TextContent;
-import dev.langchain4j.data.message.ToolExecutionResultMessage;
-import dev.langchain4j.data.message.UserMessage;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicContent;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicImageContent;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicMessage;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicMessageContent;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicTextContent;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicTool;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicToolResultContent;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicToolSchema;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicToolUseContent;
-import dev.langchain4j.model.anthropic.internal.api.AnthropicUsage;
-import dev.langchain4j.model.output.FinishReason;
-import dev.langchain4j.model.output.TokenUsage;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-
 import static dev.langchain4j.internal.Exceptions.illegalArgument;
+import static dev.langchain4j.internal.JsonSchemaElementUtils.toMap;
 import static dev.langchain4j.internal.Utils.isNotNullOrBlank;
 import static dev.langchain4j.internal.Utils.isNullOrBlank;
 import static dev.langchain4j.internal.Utils.isNullOrEmpty;
@@ -39,6 +10,8 @@ import static dev.langchain4j.model.anthropic.internal.api.AnthropicContentBlock
 import static dev.langchain4j.model.anthropic.internal.api.AnthropicContentBlockType.TOOL_USE;
 import static dev.langchain4j.model.anthropic.internal.api.AnthropicRole.ASSISTANT;
 import static dev.langchain4j.model.anthropic.internal.api.AnthropicRole.USER;
+import static dev.langchain4j.model.anthropic.internal.client.Json.fromJson;
+import static dev.langchain4j.model.anthropic.internal.client.Json.toJson;
 import static dev.langchain4j.model.output.FinishReason.LENGTH;
 import static dev.langchain4j.model.output.FinishReason.OTHER;
 import static dev.langchain4j.model.output.FinishReason.STOP;
@@ -48,9 +21,45 @@ import static java.util.Collections.emptyMap;
 import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
 
-public class AnthropicMapper {
+import dev.langchain4j.Internal;
+import dev.langchain4j.agent.tool.ToolExecutionRequest;
+import dev.langchain4j.agent.tool.ToolSpecification;
+import dev.langchain4j.data.image.Image;
+import dev.langchain4j.data.message.AiMessage;
+import dev.langchain4j.data.message.ChatMessage;
+import dev.langchain4j.data.message.ImageContent;
+import dev.langchain4j.data.message.PdfFileContent;
+import dev.langchain4j.data.message.SystemMessage;
+import dev.langchain4j.data.message.TextContent;
+import dev.langchain4j.data.message.ToolExecutionResultMessage;
+import dev.langchain4j.data.message.UserMessage;
+import dev.langchain4j.data.pdf.PdfFile;
+import dev.langchain4j.exception.UnsupportedFeatureException;
+import dev.langchain4j.model.anthropic.AnthropicTokenUsage;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicCacheType;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicImageContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicMessage;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicMessageContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicPdfContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicTextContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicTool;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicToolChoice;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicToolChoiceType;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicToolResultContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicToolSchema;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicToolUseContent;
+import dev.langchain4j.model.anthropic.internal.api.AnthropicUsage;
+import dev.langchain4j.model.chat.request.ToolChoice;
+import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
+import dev.langchain4j.model.output.FinishReason;
+import dev.langchain4j.model.output.TokenUsage;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 
-    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+@Internal
+public class AnthropicMapper {
 
     public static List<AnthropicMessage> toAnthropicMessages(List<ChatMessage> messages) {
 
@@ -61,6 +70,8 @@ public class AnthropicMapper {
 
             if (message instanceof ToolExecutionResultMessage) {
                 toolContents.add(toAnthropicToolResultContent((ToolExecutionResultMessage) message));
+            } else if (message instanceof SystemMessage) {
+                // ignore, it is handled in the "toAnthropicSystemPrompt" method
             } else {
                 if (!toolContents.isEmpty()) {
                     anthropicMessages.add(new AnthropicMessage(USER, toolContents));
@@ -91,22 +102,26 @@ public class AnthropicMapper {
     private static List<AnthropicMessageContent> toAnthropicMessageContents(UserMessage message) {
         return message.contents().stream()
                 .map(content -> {
-                    if (content instanceof TextContent) {
-                        return new AnthropicTextContent(((TextContent) content).text());
-                    } else if (content instanceof ImageContent) {
-                        Image image = ((ImageContent) content).image();
+                    if (content instanceof TextContent textContent) {
+                        return new AnthropicTextContent(textContent.text());
+                    } else if (content instanceof ImageContent imageContent) {
+                        Image image = imageContent.image();
                         if (image.url() != null) {
-                            throw illegalArgument("Anthropic does not support images as URLs, " +
-                                    "only as Base64-encoded strings");
+                            throw new UnsupportedFeatureException(
+                                    "Anthropic does not support images as URLs, only as Base64-encoded strings");
                         }
                         return new AnthropicImageContent(
                                 ensureNotBlank(image.mimeType(), "mimeType"),
-                                ensureNotBlank(image.base64Data(), "base64Data")
-                        );
+                                ensureNotBlank(image.base64Data(), "base64Data"));
+                    } else if (content instanceof PdfFileContent pdfFileContent) {
+                        PdfFile pdfFile = pdfFileContent.pdfFile();
+                        return new AnthropicPdfContent(
+                                pdfFile.mimeType(), ensureNotBlank(pdfFile.base64Data(), "base64Data"));
                     } else {
                         throw illegalArgument("Unknown content type: " + content);
                     }
-                }).collect(toList());
+                })
+                .collect(toList());
     }
 
     private static List<AnthropicMessageContent> toAnthropicMessageContents(AiMessage message) {
@@ -118,35 +133,45 @@ public class AnthropicMapper {
 
         if (message.hasToolExecutionRequests()) {
             List<AnthropicToolUseContent> toolUseContents = message.toolExecutionRequests().stream()
-                    .map(toolExecutionRequest -> {
-                        try {
-                            return AnthropicToolUseContent.builder()
-                                    .id(toolExecutionRequest.id())
-                                    .name(toolExecutionRequest.name())
-                                    .input(OBJECT_MAPPER.readValue(toolExecutionRequest.arguments(), Map.class))
-                                    .build();
-                        } catch (JsonProcessingException e) {
-                            throw new RuntimeException(e);
-                        }
-                    })
-                    .collect(toList());
+                    .map(toolExecutionRequest -> AnthropicToolUseContent.builder()
+                            .id(toolExecutionRequest.id())
+                            .name(toolExecutionRequest.name())
+                            .input(toAnthropicInput(toolExecutionRequest))
+                            .build())
+                    .toList();
             contents.addAll(toolUseContents);
         }
 
         return contents;
     }
 
-    public static String toAnthropicSystemPrompt(List<ChatMessage> messages) {
-        String systemPrompt = messages.stream()
-                .filter(message -> message instanceof SystemMessage)
-                .map(message -> ((SystemMessage) message).text())
-                .collect(joining("\n\n"));
-
-        if (isNullOrBlank(systemPrompt)) {
-            return null;
-        } else {
-            return systemPrompt;
+    private static Map<String, Object> toAnthropicInput(ToolExecutionRequest toolExecutionRequest) {
+        String arguments = toolExecutionRequest.arguments();
+        if (isNullOrBlank(arguments)) {
+            return Map.of();
         }
+
+        return fromJson(arguments, Map.class);
+    }
+
+    public static List<AnthropicTextContent> toAnthropicSystemPrompt(
+            List<ChatMessage> messages, AnthropicCacheType cacheType) {
+        List<SystemMessage> systemMessages = messages.stream()
+                .filter(message -> message instanceof SystemMessage)
+                .map(message -> (SystemMessage) message)
+                .collect(toList());
+
+        SystemMessage lastSystemMessage =
+                systemMessages.isEmpty() ? null : systemMessages.get(systemMessages.size() - 1);
+        return systemMessages.stream()
+                .map(message -> {
+                    boolean isLastItem = message.equals(lastSystemMessage);
+                    if (isLastItem && cacheType != AnthropicCacheType.NO_CACHE) {
+                        return new AnthropicTextContent(message.text(), cacheType.cacheControl());
+                    }
+                    return new AnthropicTextContent(message.text());
+                })
+                .collect(toList());
     }
 
     public static AiMessage toAiMessage(List<AnthropicContent> contents) {
@@ -158,17 +183,11 @@ public class AnthropicMapper {
 
         List<ToolExecutionRequest> toolExecutionRequests = contents.stream()
                 .filter(content -> content.type == TOOL_USE)
-                .map(content -> {
-                    try {
-                        return ToolExecutionRequest.builder()
-                                .id(content.id)
-                                .name(content.name)
-                                .arguments(OBJECT_MAPPER.writeValueAsString(content.input))
-                                .build();
-                    } catch (JsonProcessingException e) {
-                        throw new RuntimeException(e);
-                    }
-                })
+                .map(content -> ToolExecutionRequest.builder()
+                        .id(content.id)
+                        .name(content.name)
+                        .arguments(toJson(content.input))
+                        .build())
                 .collect(toList());
 
         if (isNotNullOrBlank(text) && !isNullOrEmpty(toolExecutionRequests)) {
@@ -184,45 +203,71 @@ public class AnthropicMapper {
         if (anthropicUsage == null) {
             return null;
         }
-        return new TokenUsage(anthropicUsage.inputTokens, anthropicUsage.outputTokens);
+        return AnthropicTokenUsage.builder()
+                .inputTokenCount(anthropicUsage.inputTokens)
+                .outputTokenCount(anthropicUsage.outputTokens)
+                .cacheCreationInputTokens(anthropicUsage.cacheCreationInputTokens)
+                .cacheReadInputTokens(anthropicUsage.cacheReadInputTokens)
+                .build();
     }
 
     public static FinishReason toFinishReason(String anthropicStopReason) {
         if (anthropicStopReason == null) {
             return null;
         }
-        switch (anthropicStopReason) {
-            case "end_turn":
-                return STOP;
-            case "max_tokens":
-                return LENGTH;
-            case "stop_sequence":
-                return OTHER; // TODO
-            case "tool_use":
-                return TOOL_EXECUTION;
-            default:
-                return null; // TODO
-        }
+        return switch (anthropicStopReason) {
+            case "end_turn", "stop_sequence" -> STOP;
+            case "max_tokens" -> LENGTH;
+            case "tool_use" -> TOOL_EXECUTION;
+            default -> OTHER;
+        };
     }
 
-    public static List<AnthropicTool> toAnthropicTools(List<ToolSpecification> toolSpecifications) {
-        if (toolSpecifications == null) {
-            return null;
-        }
+    public static List<AnthropicTool> toAnthropicTools(
+            List<ToolSpecification> toolSpecifications, AnthropicCacheType cacheToolsPrompt) {
+        ToolSpecification lastToolSpecification =
+                toolSpecifications.isEmpty() ? null : toolSpecifications.get(toolSpecifications.size() - 1);
         return toolSpecifications.stream()
-                .map(AnthropicMapper::toAnthropicTool)
+                .map(toolSpecification -> {
+                    boolean isLastItem = toolSpecification.equals(lastToolSpecification);
+                    if (isLastItem && cacheToolsPrompt != AnthropicCacheType.NO_CACHE) {
+                        return toAnthropicTool(toolSpecification, cacheToolsPrompt);
+                    }
+                    return toAnthropicTool(toolSpecification, AnthropicCacheType.NO_CACHE);
+                })
                 .collect(toList());
     }
 
-    public static AnthropicTool toAnthropicTool(ToolSpecification toolSpecification) {
-        ToolParameters parameters = toolSpecification.parameters();
-        return AnthropicTool.builder()
+    public static AnthropicTool toAnthropicTool(
+            ToolSpecification toolSpecification, AnthropicCacheType cacheToolsPrompt) {
+        JsonObjectSchema parameters = toolSpecification.parameters();
+
+        AnthropicTool.Builder toolBuilder = AnthropicTool.builder()
                 .name(toolSpecification.name())
                 .description(toolSpecification.description())
                 .inputSchema(AnthropicToolSchema.builder()
-                        .properties(parameters != null ? parameters.properties() : emptyMap())
+                        .properties(parameters != null ? toMap(parameters.properties()) : emptyMap())
                         .required(parameters != null ? parameters.required() : emptyList())
-                        .build())
-                .build();
+                        .build());
+
+        if (cacheToolsPrompt != AnthropicCacheType.NO_CACHE) {
+            return toolBuilder.cacheControl(cacheToolsPrompt.cacheControl()).build();
+        }
+
+        return toolBuilder.build();
+    }
+
+    public static AnthropicToolChoice toAnthropicToolChoice(ToolChoice toolChoice) {
+        if (toolChoice == null) {
+            return null;
+        }
+
+        AnthropicToolChoiceType toolChoiceType =
+                switch (toolChoice) {
+                    case AUTO -> AnthropicToolChoiceType.AUTO;
+                    case REQUIRED -> AnthropicToolChoiceType.ANY;
+                };
+
+        return AnthropicToolChoice.from(toolChoiceType);
     }
 }
