@@ -1,29 +1,26 @@
 package dev.langchain4j.internal;
 
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-
-public class CustomMimeTypesFileTypeDetectorTest {
+class CustomMimeTypesFileTypeDetectorTest {
     @Test
     void should_return_a_mime_type_from_default_mapping_from_path() {
         // given
         CustomMimeTypesFileTypeDetector detector = new CustomMimeTypesFileTypeDetector();
 
         // when
-        Path path = Paths.get("/foo/bar/index.html");
+        Path path = Path.of("/foo/bar/index.html");
         String mimeType = detector.probeContentType(path);
 
         // then
@@ -106,12 +103,13 @@ public class CustomMimeTypesFileTypeDetectorTest {
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {
-        "http://example.org/cat",
-        "http://example.org/cat.banana",
-        "http://example.org/some.path/cat",
-        "http://example.org/cat?query=dog.png"
-    })
+    @ValueSource(
+            strings = {
+                "http://example.org/cat",
+                "http://example.org/cat.banana",
+                "http://example.org/some.path/cat",
+                "http://example.org/cat?query=dog.png"
+            })
     void should_fail_to_detect_mime_type(String url) throws MalformedURLException, URISyntaxException {
         // given
         CustomMimeTypesFileTypeDetector detector = new CustomMimeTypesFileTypeDetector();
